--- a/examples/LandmarkDetection/DQN/GUI/text/automatic_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/automatic_text.html
@@ -1,6 +1,6 @@
 <!-- 
-    Simple HTML page for automatic mode help.
-    Author: Maleakhi
+# Simple HTML page for automatic mode help.
+# Author: Maleakhi
  -->
  
 <h1 style='color:#003E74'> Automatic Mode Help </h1>
