--- a/examples/LandmarkDetection/DQN/GUI/text/browse_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/browse_text.html
@@ -1,6 +1,6 @@
 <!-- 
-    Simple HTML page for browse mode help.
-    Author: Maleakhi
+# Simple HTML page for browse mode help.
+# Author: Maleakhi
  -->
 
 <h1 style='color:#003E74'> Browse Mode Help </h1><br />
