--- a/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
@@ -1,6 +1,6 @@
 <!-- 
-    Simple HTML text for welcome page.
-    Author: Maleakhi
+# Simple HTML text for welcome page.
+# Author: Maleakhi
  -->
  
 <html>
