Begin editing right widget automatic

--- a/examples/LandmarkDetection/DQN/GUI/text/quick_automatic_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/quick_automatic_text.html
@@ -1,5 +1,5 @@
 <b><p style='color:#003E74'>Automatic Mode</p></b>
-<p style='color:#006EAF'><i>For more information: Ctrl+H</i></p><br />
+<p style='color:#006EAF'><i>For more information: Ctrl+H</i></p>
 <br /><b>1. Load data:</b> choose default or browse custom data.
 <br /><b>2. Task selection: </b>select (Play|Evaluation) task.
 <br /><b>3. Simulation: </b>start visualisation by pressing <i>Start</i> button, <i>Pause</i> to pause simulation
