--- a/examples/LandmarkDetection/DQN/GUI/text/quick_browse_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/quick_browse_text.html
@@ -1,6 +1,5 @@
 <b><p style='color:#003E74'>Browse Mode</p></b>
-<p style='color:#006EAF'><i>(For more information: Ctrl+H)</i></p><br />
-
+<p style='color:#006EAF'><i>(For more information: Ctrl+H)</i></p>
 <br /><b>1. Load data:</b> choose default or browse custom data.
 <br /><b>2. Enable HITL:</b> toggle checkbox to notify to store user interaction data.
 <br /><b>3. Navigation:</b> press <i>Human Actions</i> arrow to navigate agent until Error = 0.
