--- a/examples/LandmarkDetection/DQN/GUI/text/quick_automatic_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/quick_automatic_text.html
@@ -1,3 +1,8 @@
+<!-- 
+# Simple HTML page for quick automatic mode help.
+# Author: Maleakhi
+ -->
+
 <b><p style='color:#003E74'>Automatic Mode</p></b>
 <p style='color:#006EAF'><i>For more information: Ctrl+H</i></p>
 <br /><b>1. Load data:</b> choose default or browse custom data.
