--- a/examples/LandmarkDetection/DQN/GUI/text/quick_browse_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/quick_browse_text.html
@@ -1,3 +1,8 @@
+<!-- 
+# Simple HTML page for browse mode quick help.
+# Author: Maleakhi
+ -->
+
 <b><p style='color:#003E74'>Browse Mode</p></b>
 <p style='color:#006EAF'><i>(For more information: Ctrl+H)</i></p>
 <br /><b>1. Load data:</b> choose default or browse custom data.
