--- a/examples/LandmarkDetection/DQN/GUI/text/automatic_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/automatic_text.html
@@ -1,23 +1,25 @@
-<!-- 
+<!--
 # Simple HTML page for automatic mode help.
 # Author: Maleakhi
  -->
- 
-<h1 style='color:#003E74'> Automatic Mode Help </h1>
+
+<h1 style='color:#003E74'> Automatic Mode</h1>
 <br />
 
-<p>Automatic mode allows <i>axial</i>, <i>coronal</i>, <i>sagittal</i> 
-, and <i>3D</i> visualisation of trained agent's trajectories.</p> <br />
+<p>Automatic mode shows the agent's steps projected onto <i>axial</i>, <i>coronal</i>,
+    and <i>sagittal</i> 2D views. The complete path towards the landmark can also be
+    visualised using the 3D volume.</p> <br />
 
-<h2 style='color:#009CBC'>How to Run Simulation?</h2><br />
+<h2 style='color:#009CBC'>How to launch an agent?</h2><br />
+Users can launch the RL loop using default data, or with custom data.<br />
 
 <ol>
-    <li><b>1. Load Data</b>: There are two options to load the data: <i>default</i> and
-    <i>custom</i>. To load default data, simply toggle the appropriate radio button (i.e. Brain|Cardiac|Fetal). This will 
-    prepare default model, image, and landmark for the selected use-case. You can also load custom data by uploading your own image, landmark, and model files
-    through <i>Browse</i> buttons. Please ensure that you select the correct combination of files.</li>
-    <li><b>2. Task Selection</b>: Select either <i>Play</i> or <i>Evaluation</i> task before running the code.</li>
-    <li><b>3. Simulation</b>: Press <i>Start</i> button to start simulation, <i>Pause</i> to pause simulation, and <i>Terminate</i> to exit simulation. After termination, you can
-    then follow step 1 and 2 to run new simulation.</li>
-    <li><b>4. Agent Speed</b>: You can optionally change simulation speed using the agent speed slider.</li>
+    <li><b>1. Loading data</b>. There are two options to load the data: <i>Default</i> and
+    <i>Custom</i>. To load default data, simply select the radio button from one of the three options . This will
+    prepare default model, image, and landmark data for the selected use-case. You can also load custom data by uploading your own model, image, and landmark files
+    through the <i>Browse</i> buttons. Please ensure that you select the correct combination of files.</li>
+    <li><b>2. Task selection</b>. Select either <i>Play</i> or <i>Evaluation</i> before running the application.</li>
+    <li><b>3. Visualisation</b>: Press the <i>Start</i> button to start the observation, <i>Pause</i> to temporarily freeze the agent, and <i>Terminate</i> to exit the loop. After terminating, you can
+    then follow step 1 and 2 to run a new visualisation.</li>
+    <li><b>4. Agent speed</b>: You can optionally change the speed of the agent using the speed slider.</li>
 </ol>
