--- a/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
@@ -12,17 +12,18 @@
     brain MRI, cardiac MRI, and fetal ultrasound 3D images. ALADDIN also facilitates Human-in-the-Loop (HITL)
     experiments by storing human steps in the enviroment.</p><br />
 
-    <h2 style='color:#009CBC'>Automatic Mode</h2><br />
+    <h2 style='color:#009CBC'>Automatic mode</h2><br />
     In Automatic mode, you can simultaneously visualise the learned policy of the agent on 2D projections
     and within a 3D volume.<br />
 
-    <h2 style='color:#009CBC'>Browse Mode</h2><br />
+    <h2 style='color:#009CBC'>Browse mode</h2><br />
     In Browse mode, the user can use one of the six possible actions to freely navigate through the 3D enviroment.<br />
 
-    <h2 style='color:#009CBC'>HITL Mode</h2><br />
+    <h2 style='color:#009CBC'>HITL mode</h2><br />
     HITL mode allows an human expert to record steps in the enviroment towards an anatomical landmark. This data
     is automatically stored for further use in HITL experiments.<br />
 
+    <hr>
     <p><i>For more information about installation, problem specification, and paper references, please
         visit <a href="https://github.com/ollenilsson19/rl-medical">https://github.com/ollenilsson19/rl-medical</a></i></p>
 </body>
