modified html for browse mode quick help

--- a/examples/LandmarkDetection/DQN/GUI/text/automatic_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/automatic_text.html
@@ -1,6 +1,6 @@
 <!--
 # Simple HTML page for automatic mode help.
-# Author: Maleakhi
+# Author: Maleakhi, Jamie
  -->
 
 <h1 style='color:#003E74'> Automatic Mode</h1>
@@ -19,7 +19,6 @@ Users can launch the RL loop using default data, or with custom data.<br />
     prepare default model, image, and landmark data for the selected use-case. You can also load custom data by uploading your own model, image, and landmark files
     through the <i>Browse</i> buttons. Please ensure that you select the correct combination of files.</li>
     <li><b>2. Task selection</b>. Select either <i>Play</i> or <i>Evaluation</i> before running the application.</li>
-    <li><b>3. Visualisation</b>: Press the <i>Start</i> button to start the observation, <i>Pause</i> to temporarily freeze the agent, and <i>Terminate</i> to exit the loop. After terminating, you can
-    then follow step 1 and 2 to run a new visualisation.</li>
+    <li><b>3. Visualisation</b>: Press the <i>Start</i> button to start the observation, <i>Pause</i> to temporarily freeze the agent, and <i>Terminate</i> to exit the loop. After terminating, you can then follow steps 1 and 2 to run a new visualisation.</li>
     <li><b>4. Agent speed</b>: You can optionally change the speed of the agent using the speed slider.</li>
 </ol>
