--- a/examples/LandmarkDetection/DQN/GUI/text/quick_automatic_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/quick_automatic_text.html
@@ -1,11 +1,11 @@
-<!-- 
+<!--
 # Simple HTML page for quick automatic mode help.
 # Author: Maleakhi
  -->
 
 <b><p style='color:#003E74'>Automatic Mode</p></b>
-<p style='color:#006EAF'><i>For more information: Ctrl+H</i></p>
-<br /><b>1. Load data:</b> choose default or browse custom data.
-<br /><b>2. Task selection: </b>select (Play|Evaluation) task.
-<br /><b>3. Simulation:</b> control simulation by pressing <i>Start, Pause,</i> or <i>Terminate</i>. After termination, you can run a new simulation using different settings.
-<br /><b>4. Agent speed:</b> optionally change simulation speed using agent speed slider.
+<p style='color:#006EAF'><i>For more information: Ctrl+H</i>.</p>
+<br /><b>1. Load data:</b> choose defaults or browse custom data.
+<br /><b>2. Task selection: </b>select <i>Play</i> or <i>Evaluation</i>.
+<br /><b>3. Visualisation:</b> control visualisation by pressing <i>Start</i>, <i>Pause</i>, or <i>Terminate</i>. After terminating, you can run a new visualisation using different settings.
+<br /><b>4. Agent speed:</b> optionally change visualisation speed using agent speed slider.
