modified html for browse mode quick help

--- a/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
@@ -10,7 +10,7 @@
     <p>Welcome to <b>A</b>natomical <b>L</b>andmark <b>D</b>etection and <b>D</b>emonstration <b>I</b>nterface!
     ALADDIN is a interface for visualising landmark detection reinforcement learning (RL) agents trained on
     brain MRI, cardiac MRI, and fetal ultrasound 3D images. ALADDIN also facilitates Human-in-the-Loop (HITL)
-    experiments by storing human steps in the enviroment.</p><br />
+    experiments by storing human steps in the environment.</p><br />
 
     <h2 style='color:#009CBC'>Automatic mode</h2><br />
     In Automatic mode, you can simultaneously visualise the learned policy of the agent on 2D projections
