final changes to html help window

--- a/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
@@ -17,7 +17,7 @@
     and within a 3D volume.<br />
 
     <h2 style='color:#009CBC'>Browse mode</h2><br />
-    In Browse mode, the user can use one of the six possible actions to freely navigate through the 3D enviroment.<br />
+    In Browse mode, the user can select one of six possible actions to freely navigate through the 3D enviroment.<br />
 
     <h2 style='color:#009CBC'>HITL mode</h2><br />
     HITL mode allows an human expert to record steps in the enviroment towards an anatomical landmark. This data
