--- a/examples/LandmarkDetection/DQN/GUI/text/automatic_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/automatic_text.html
@@ -8,17 +8,17 @@
 
 <p>Automatic mode shows the agent's steps projected onto <i>axial</i>, <i>coronal</i>,
     and <i>sagittal</i> 2D views. The complete path towards the landmark can also be
-    visualised using the 3D volume.</p> <br />
+    visualised in the 3D volume.</p> <br />
 
 <h2 style='color:#009CBC'>How to launch an agent?</h2><br />
-Users can launch the RL loop using default data, or with custom data.<br />
+Users can launch the RL agent using default data, or with custom data.<br />
 
 <ol>
     <li><b>1. Loading data</b>. There are two options to load the data: <i>Default</i> and
-    <i>Custom</i>. To load default data, simply select the radio button from one of the three options . This will
+    <i>Custom</i>. To load default data, simply select the radio button from one of the three options. This will
     prepare default model, image, and landmark data for the selected use-case. You can also load custom data by uploading your own model, image, and landmark files
     through the <i>Browse</i> buttons. Please ensure that you select the correct combination of files.</li>
     <li><b>2. Task selection</b>. Select either <i>Play</i> or <i>Evaluation</i> before running the application.</li>
-    <li><b>3. Visualisation</b>: Press the <i>Start</i> button to start the observation, <i>Pause</i> to temporarily freeze the agent, and <i>Terminate</i> to exit the loop. After terminating, you can then follow steps 1 and 2 to run a new visualisation.</li>
-    <li><b>4. Agent speed</b>: You can optionally change the speed of the agent using the speed slider.</li>
+    <li><b>3. Visualisation</b>. Press the <i>Start</i> button to start the observation, <i>Pause</i> to temporarily freeze the agent, and <i>Terminate</i> to exit the loop. After terminating, return to steps 1 and 2 to run a new visualisation.</li>
+    <li><b>4. Agent speed</b>. You can optionally change the speed of the agent using the speed slider.</li>
 </ol>
