add keyboard shortcut

--- a/examples/LandmarkDetection/DQN/GUI/text/browse_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/browse_text.html
@@ -17,7 +17,7 @@
     will be stored on appropriate pickle file.
 <br /><b>3. Navigating in HITL mode</b> The task is to move agent towards the target (red dot). 
     Press <i>Human Actions</i> arrows to navigate until you reach the red dot (Error ~ 0.0). You can control step size
-    using the <i>-</i> and <i>+</i> buttons to reduce or increase step size.
+    using the <i>-</i> and <i>+</i> buttons to reduce or increase step size. Alternatively, navigate by pressing the following keyboard shortcut (w = +y, s = -y, a = -x, d = +x, z = +z, x = -z).
 <br /><b>4. Next Image</b> Press next image to annotate next sequence of image. Alternatively, you can delete previous annotation by clicking <i>Delete Episode</i>.
 <br /><b>5. Save data</b>  Once finished, to save the HITL session, either: (1) close the GUI or (2) click on <i>Enable HITL</i> checkbox again (it will
     automatically save a pickle file in /data/HITL).
