spelling correction on help page

--- a/examples/LandmarkDetection/DQN/GUI/text/browse_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/browse_text.html
@@ -5,8 +5,8 @@
 
 <h1 style='color:#003E74'> Browse Mode</h1><br />
 
-<p>Browse mode allows users to navigate through the medical image environment. Its also
-    where HITL mode can be turned in order to collect data for experiments.</p><br />
+<p>Browse mode allows users to navigate through the medical image environment. Within Browse mode is also
+    where HITL mode can be selected in order to collect data for experiments.</p><br />
 
 <h2 style='color:#009CBC'>How to gather HITL data?</h2><br />
 Once Browse mode has been selected, users can additionally chose to enter HITL mode.
