--- a/examples/LandmarkDetection/DQN/GUI/text/quick_browse_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/quick_browse_text.html
@@ -7,6 +7,6 @@
 <p style='color:#006EAF'><i>For more information: Ctrl+H</i></p>
 <br /><b>1. Load data:</b> choose defaults, or browse custom data.
 <br /><b>2. Enable HITL:</b> toggle checkbox to enable storing of interaction data.
-<br /><b>3. Navigation:</b> press one of the six <i>Human Actions</i> or keyboard shortcut (w = +y, s = -y, a = -x, d = +x, z = +z, x = -z) to navigate through the enviroment.
+<br /><b>3. Navigation:</b> press one of the six <i>Human Actions</i> or keyboard shortcuts (w = +y, s = -y, a = -x, d = +x, z = +z, x = -z) to navigate through the enviroment.
 <br /><b>4. Next image:</b> press <i>Next Image</i> to move to the next loaded image.
 <br /><b>5. Save data:</b> to save interaction data, toggle off <i>Enable HITL</i>, or close the GUI.
