Fixing key bindings for fetal

--- a/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
@@ -7,13 +7,13 @@
 <body>
     <h1 style='color:#003E74'> Welcome! </h1><br />
 
-    <p>Welcome to <b>A</b>natomical <b>L</b>andmark <b>D</b>etection and <b>D</b>emonstration <b>I</b>nterface!
+    <p>Welcome to the <b>A</b>natomical <b>La</b>ndmark <b>D</b>etection and <b>D</b>emonstration <b>In</b>terface!
     ALADDIN is a interface for visualising landmark detection reinforcement learning (RL) agents trained on
     brain MRI, cardiac MRI, and fetal ultrasound 3D images. ALADDIN also facilitates Human-in-the-Loop (HITL)
-    experiments by storing human steps in the environment.</p><br />
+    experimentation by facilitating human interaction with the enviroment and storing the results.</p><br />
 
     <h2 style='color:#009CBC'>Automatic mode</h2><br />
-    In Automatic mode, you can simultaneously visualise the learned policy of the agent on 2D projections
+    In Automatic mode, you can visualise the learned policy of the agent on 2D projections
     and within a 3D volume.<br />
 
     <h2 style='color:#009CBC'>Browse mode</h2><br />
