--- a/examples/LandmarkDetection/DQN/GUI/text/automatic_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/automatic_text.html
@@ -17,7 +17,8 @@ Users can launch the RL agent using default data, or with custom data.<br />
     <li><b>1. Loading data</b>. There are two options to load the data: <i>Default</i> and
     <i>Custom</i>. To load default data, simply select the radio button from one of the three options. This will
     prepare default model, image, and landmark data for the selected use-case. You can also load custom data by uploading your own model, image, and landmark files
-    through the <i>Browse</i> buttons. Please ensure that you select the correct combination of files.</li>
+    through the <i>Browse</i> buttons. Please ensure that you select the correct combination of files. The image and landmark uploads should be .txt files 
+    containing the paths to the image files.</li>
     <li><b>2. Task selection</b>. Select either <i>Play</i> or <i>Evaluation</i> before running the application.</li>
     <li><b>3. Visualisation</b>. Press the <i>Start</i> button to start the observation, <i>Pause</i> to temporarily freeze the agent, and <i>Terminate</i> to exit the loop. After terminating, return to steps 1 and 2 to run a new visualisation.</li>
     <li><b>4. Agent speed</b>. You can optionally change the speed of the agent using the speed slider.</li>
