spelling changes on comments

--- a/examples/LandmarkDetection/DQN/GUI/text/browse_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/browse_text.html
@@ -9,7 +9,7 @@
     where HITL mode can be selected in order to collect data for experiments.</p><br />
 
 <h2 style='color:#009CBC'>How to gather HITL data?</h2><br />
-Once Browse mode has been selected, users can additionally chose to enter HITL mode.
+Once Browse mode has been selected, users can additionally choose to enter HITL mode.
 <hr>
 <b>1. Loading data</b>. There are two options to load the data: <i>Default</i> and
     <i>Custom</i>. To load default data, simply select the radio button from one of the three options. This will
