--- a/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
@@ -8,7 +8,7 @@
     <h1 style='color:#003E74'> Welcome! </h1><br />
 
     <p>Welcome to the <b>A</b>natomical <b>La</b>ndmark <b>D</b>etection and <b>D</b>emonstration <b>In</b>terface!
-    ALADDIN is a interface for visualising landmark detection reinforcement learning (RL) agents trained on
+    ALADDIN is an interface for visualising landmark detection reinforcement learning (RL) agents trained on
     brain MRI, cardiac MRI, and fetal ultrasound 3D images. ALADDIN also facilitates Human-in-the-Loop (HITL)
     experimentation by facilitating human interaction with the enviroment and storing the results.</p><br />
 
@@ -20,7 +20,7 @@
     In Browse mode, the user can select one of six possible actions to freely navigate through the 3D enviroment.<br />
 
     <h2 style='color:#009CBC'>HITL mode</h2><br />
-    HITL mode allows an human expert to record steps in the enviroment towards an anatomical landmark. This data
+    HITL mode allows a human expert to record steps in the enviroment towards an anatomical landmark. This data
     is automatically stored for further use in HITL experiments.<br />
 
     <hr>
