welcome msg edit (faciliate repeated)

--- a/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
+++ b/examples/LandmarkDetection/DQN/GUI/text/welcome_text.html
@@ -8,9 +8,9 @@
     <h1 style='color:#003E74'> Welcome! </h1><br />
 
     <p>Welcome to the <b>A</b>natomical <b>La</b>ndmark <b>D</b>etection and <b>D</b>emonstration <b>In</b>terface!
-    ALADDIN is an interface for visualising landmark detection reinforcement learning (RL) agents trained on
+    ALADDIN is an interface for visualising landmark detection reinforcement learning (RL) agents, trained on
     brain MRI, cardiac MRI, and fetal ultrasound 3D images. ALADDIN also facilitates Human-in-the-Loop (HITL)
-    experimentation by facilitating human interaction with the enviroment and storing the results.</p><br />
+    experimentation by enabling human interaction with the enviroment and storing of the results.</p><br />
 
     <h2 style='color:#009CBC'>Automatic mode</h2><br />
     In Automatic mode, you can visualise the learned policy of the agent on 2D projections
